@@ -13,10 +13,10 @@ import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.web.context.WebApplicationContext;
@@ -73,13 +73,13 @@ public class CaseControllerFunctionalTest {
 
     private final RequestSpecification request = RestAssured.given().relaxedHTTPSValidation().baseUri(targetInstance);
 
-    @MockBean
+    @MockitoBean
     private AuthorisationService authorisationService;
 
-    @MockBean
+    @MockitoBean
     private CaseService caseService;
 
-    @MockBean
+    @MockitoBean
     private AuthTokenGenerator authTokenGenerator;
 
     private static CaseData caseData;
@@ -211,8 +211,8 @@ public class CaseControllerFunctionalTest {
 
         Assert.assertNotNull(responseData);
         Assert.assertNotNull(responseData.getOtherPartyInTheCaseRevised());
-        Assert.assertNotNull(responseData.getOtherPartyInTheCaseRevised().get(0));
-        Assert.assertEquals("Andrew",responseData.getOtherPartyInTheCaseRevised().get(0).getValue().getFirstName());
-        Assert.assertEquals("Smith",responseData.getOtherPartyInTheCaseRevised().get(0).getValue().getLastName());
+        Assert.assertNotNull(responseData.getOtherPartyInTheCaseRevised().getFirst());
+        Assert.assertEquals("Andrew",responseData.getOtherPartyInTheCaseRevised().getFirst().getValue().getFirstName());
+        Assert.assertEquals("Smith",responseData.getOtherPartyInTheCaseRevised().getFirst().getValue().getLastName());
     }
 }
