@@ -1,7 +1,6 @@
 package uk.gov.hmcts.reform.prl.services;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import javassist.NotFoundException;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
@@ -30,6 +29,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import javax.ws.rs.NotFoundException;
 
 import static org.junit.Assert.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
@@ -326,8 +326,8 @@ public class SolicitorEmailServiceTest {
             .email("test@demo.com")
             .build();
 
-        String email = (!applicantList.isEmpty() && applicantList.get(0).getEmail() != null) ? String.valueOf(
-            applicantList.get(0).getEmail())
+        String email = (!applicantList.isEmpty() && applicantList.getFirst().getEmail() != null) ? String.valueOf(
+            applicantList.getFirst().getEmail())
             : userDetails.getEmail();
 
         Map<String, Object> data = new HashMap<>();
@@ -371,8 +371,8 @@ public class SolicitorEmailServiceTest {
             .email("test@demo.com")
             .build();
 
-        String email = (!applicantList.isEmpty() && applicantList.get(0).getEmail() != null) ? String.valueOf(
-            applicantList.get(0).getEmail())
+        String email = (!applicantList.isEmpty() && applicantList.getFirst().getEmail() != null) ? String.valueOf(
+            applicantList.getFirst().getEmail())
             : userDetails.getEmail();
 
         Map<String, Object> data = new HashMap<>();
@@ -608,8 +608,8 @@ public class SolicitorEmailServiceTest {
             .email("test@demo.com")
             .build();
 
-        String email = (!applicantList.isEmpty() && applicantList.get(0).getEmail() != null) ? String.valueOf(
-            applicantList.get(0).getEmail())
+        String email = (!applicantList.isEmpty() && applicantList.getFirst().getEmail() != null) ? String.valueOf(
+            applicantList.getFirst().getEmail())
             : userDetails.getEmail();
 
         Map<String, Object> data = new HashMap<>();
@@ -655,8 +655,8 @@ public class SolicitorEmailServiceTest {
             .email("test@demo.com")
             .build();
 
-        String email = (!applicantList.isEmpty() && applicantList.get(0).getEmail() != null) ? String.valueOf(
-            applicantList.get(0).getEmail())
+        String email = (!applicantList.isEmpty() && applicantList.getFirst().getEmail() != null) ? String.valueOf(
+            applicantList.getFirst().getEmail())
             : userDetails.getEmail();
 
         Map<String, Object> data = new HashMap<>();
